# nmcli

./: .gitignore  .pylintrc  LICENSE.txt  README.md  develop-requiements.txt  develop-requirements.txt  pyproject.toml  setup.py
.github/: RELEASE.md
.github/workflows/: action.yml  release.yml
nmcli/: __init__.py  _connection.py  _const.py  _device.py  _exception.py  _general.py  _helper.py  _networking.py  _radio.py  _system.py
nmcli/data/: __init__.py  connection.py  device.py  general.py  hotspot.py  radio.py
nmcli/dummy/: __init__.py  _connection.py  _device.py  _general.py  _networking.py  _radio.py
tests/: connection_data.txt  device_data.txt  device_wifi_data.txt  device_wifi_data_include_bssid.txt  helper.py  test_connection.py  test_device.py  test_general.py  test_helper.py  test_networking.py  test_radio.py  test_system.py
tests/data/: test_connection.py  test_device.py  test_general.py  test_hotspot.py  test_radio.py
tests/dummy/: test_connection.py  test_device.py  test_general.py  test_networking.py  test_radio.py
